# vmmlib

./: .gitattributes  .gitexternals  .gitignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  LICENSE  LICENSE.txt  Makefile  Makefile.atlas  Makefile.cublas  README  README.md  RELNOTES.md  TODO  index.html  pack_release.sh  params.json  style.css
CMake/: CPackConfig.cmake  FindPackages.cmake  FindRequired.cmake  UploadPPA.cmake  depends.txt  vmmlib.cmake  vmmlib.in.spec
English.lproj/: InfoPlist.strings
VMML.xcodeproj/: project.pbxproj
VMMLib.xcodeproj/: project.pbxproj
doc/: Doxyfile  RELNOTES.md
include/: AxisAlignedBoundingBox.h  Frustum.h  FrustumCuller.h  HelperFunctions.h  JacobiSolver.h  Matrix3.h  Matrix3Test.h  Matrix4.h  OctreeNode.h  OctreeVisitor.h  QuadtreeNode.h  QuadtreeVisitor.h  Quaternion.h  SingularValueDecomposition.h  Sphere.h  VMMLib.h  Vector2.h  Vector3.h  Vector4.h  Visitor.h  tree_test.cpp
include/vmmlib/: LICENSE  aabb.hpp  array.hpp  axisAlignedBoundingBox.h  blas_daxpy.hpp  blas_dgemm.hpp  blas_includes.hpp  blas_types.hpp  cp3_tensor.hpp  cublas_dgemm.cu  cublas_includes.hpp  cublas_types.hpp  details.hpp  exception.hpp  frustum.h  frustum.hpp  frustumCuller.h  frustumCuller.hpp  frustum_culler.hpp  helperFunctions.h  icp3_tensor.hpp  intersection.hpp  jacobiSolver.h  jacobiSolver.hpp  lapack_gaussian_elimination.hpp  lapack_includes.hpp  lapack_linear_least_squares.hpp  lapack_svd.hpp  lapack_sym_eigs.hpp  lapack_sym_eigs_test.cpp  lapack_sym_eigs_test.hpp  lopass_filter.hpp  lowpass_filter.hpp  matrix.hpp  matrix3.h  matrix4.h  matrix_functors.hpp  matrix_mxm.hpp  matrix_mxn.hpp  matrix_pseudoinverse.hpp  (+52 more)
src/: Info.plist  Matrix3Test.cpp  main_test.cpp
src/VMML.xcodeproj/: project.pbxproj
src/include/: HelperFunctions.h  Matrix3.h  Matrix4.h  Vector3.h  Vector4.h
src/src/: main_test.cpp
src/website/: index.html
tests/: CMakeLists.txt  JacobiSolverTest.cpp  JacobiSolverTest.h  Makefile  Matrix3Test.cpp  Matrix3Test.h  Matrix4Test.cpp  Matrix4Test.h  QuaternionTest.cpp  QuaternionTest.h  SVDTest.cpp  SVDTest.h  Test.h  Vector2Test.cpp  Vector2Test.h  Vector3Test.cpp  Vector3Test.h  Vector4Test.cpp  Vector4Test.h  aabb.cpp  blas_daxpy_test.cpp  blas_daxpy_test.hpp  blas_dgemm_test.cpp  blas_dgemm_test.hpp  blas_dot_test.cpp  blas_dot_test.hpp  cp3_tensor_test.cpp  cp3_tensor_test.hpp  cublas_dgemm_test.cpp  cublas_dgemm_test.hpp  cutensor_tests.cpp  cutensor_tests.hpp  frustum.cpp  frustum_test.cpp  frustum_test.hpp  intersection_test.cpp  intersection_test.hpp  jacobi_test.cpp  jacobi_test.hpp  lapack_fake_fortran_main.cpp  (+74 more)
tests_old/: CMakeLists.txt  blas_dgemm_test.cpp  cp3_tensor_test.cpp  f2c_fix.h  intersection_test.cpp  intersection_test.hpp  jacobi_test.cpp  lapack_gaussian_elimination_test.hpp  lapack_svd_test.cpp  lowpass_filter_test.cpp  lowpass_filter_test.hpp  matrix_compare_perf_test.hpp  matrix_pseudoinverse_test.cpp  matrix_test.cpp  matrix_test.hpp  performance_test.hpp  qr_decomposition_test.cpp  qr_decomposition_test.hpp  quaternion_test.cpp  quaternion_test.hpp  t3_hooi_test.cpp  t3_hooi_test.hpp  t3_hopm_test.hpp  t3_ihopm_test.hpp  t3_ttm_test.cpp  t3_ttm_test.hpp  t4_converter_test.cpp  t4_hooi_test.cpp  t4_ttm_test.hpp  tensor3_test.cpp  tensor4_test.cpp  timer.hpp  tucker3_exporter_importer_test.cpp  tucker3_tensor_test.cpp  unit_test.cpp  unit_test.hpp  unit_test_globals.hpp  util_test.cpp  util_test.hpp  vector_test.cpp  (+4 more)
vmmlib/: aabb.hpp  blas_daxpy.hpp  blas_dgemm.hpp  blas_dot.hpp  blas_includes.hpp  blas_types.hpp  cp3_tensor.hpp  enable_if.hpp  exception.hpp  frustum.hpp  frustum_culler.hpp  intersection.hpp  jacobi_solver.hpp  lapack.hpp  lapack_gaussian_elimination.hpp  lapack_includes.hpp  lapack_linear_least_squares.hpp  lapack_svd.hpp  lapack_sym_eigs.hpp  lapack_types.hpp  linear_least_squares.hpp  lowpass_filter.hpp  math.hpp  matrix.hpp  matrix_functors.hpp  matrix_pseudoinverse.hpp  matrix_traits.hpp  qr_decomposition.hpp  qtucker3_tensor.hpp  quaternion.hpp  svd.hpp  t3_converter.hpp  t3_hooi.hpp  t3_hopm.hpp  t3_hosvd.hpp  t3_ihooi.hpp  t3_ihopm.hpp  t3_ttm.hpp  t3_ttv.hpp  t4_converter.hpp  (+20 more)
vmmlib.xcodeproj/: project.pbxproj
website/: README_upload  index.html
